--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,7 +6,7 @@ $split-animation-value: 25px;
 $orig-bg-color: #1a4276;
 $bg-color: $orig-bg-color;
 
-$scroll-bar-width: 10px;
+$scroll-bar-size: 10px;
 
 $shadow-color: black;
 $shadow-size: 10px;
@@ -23,7 +23,7 @@ $tiny-split-image-parent-min-height: 0px;
     --orig-bg-color: #{$orig-bg-color};
     background-color: var(--orig-bg-color);
   
-    --scroll-bar-width: #{$scroll-bar-width};
+    --scroll-bar-size: #{$scroll-bar-size};
   
     --shadow-color: #{$shadow-color};
     --shadow-size: #{$shadow-size};
