--- a/src/components/carousels/clubCarousel.astro
+++ b/src/components/carousels/clubCarousel.astro
@@ -1,6 +1,6 @@
 ---
 import Carousel from '../carousel.astro'
-import largeImage from '../largeImage.astro'
+import LargeImage from '../largeImage.astro'
 
 var images = await Astro.glob('../../../public/assets/club_photos/previews/*')
 
@@ -22,7 +22,7 @@ var dId = 'clubCarousel'
         images.map((img, i) => {
             img = img.default
             var src = `/assets/club_photos/previews/${getFName(img.src)}`
-            return <largeImage id={`${dId}-${i}`} src={src} draggable={false} />
+            return <LargeImage id={`${dId}-${i}`} src={src} draggable={false} />
         })
     }
 </Carousel>
