--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -74,10 +74,10 @@
 
         cursor: pointer;
 
-        &.hover-in {
+        &:has([hover-in]) {
             transition: var(--time) ease-in;
 
-            &.hover {
+            &:has([hover]) {
                 border-radius: 10px;
 
                 transition: var(--time) ease-out;
