--- a/src/styles/components/largeImage.scss
+++ b/src/styles/components/largeImage.scss
@@ -6,6 +6,13 @@
         position: absolute;
         inset: 0;
         grid-template-rows: 1fr auto 1fr;
+
+        > img {
+            background-image: var(--bg);
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
+        }
     }
 
     > input[type="checkbox"] {
