--- a/src/styles/components/largeImage.scss
+++ b/src/styles/components/largeImage.scss
@@ -3,15 +3,20 @@
     display: grid;
 
     &:has(> input[type="checkbox"]:checked) {
-        position: absolute;
+        position: fixed;
         inset: 0;
         grid-template-rows: 1fr auto 1fr;
+        // background-opacity: 0.9;
 
         > img {
             background-image: var(--bg);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
+
+            border-radius: inherit;
+            box-shadow: inherit;
+            // background-color: var(--bg-color);
         }
     }
 
