--- a/src/styles/components/largeImage.scss
+++ b/src/styles/components/largeImage.scss
@@ -1,3 +1,7 @@
+html:has(.img-parent > input[type="checkbox"]:checked) {
+    overflow: clip;
+}
+
 .img-parent {
     overflow: hidden;
     display: grid;
