--- a/src/styles/components/largeImage.scss
+++ b/src/styles/components/largeImage.scss
@@ -9,7 +9,8 @@ html:has(.img-parent > input[type="checkbox"]:checked) {
     &:has(> input[type="checkbox"]:checked) {
         position: fixed;
         inset: 0;
-        grid-template-rows: 1fr auto 1fr;
+        // grid-template-rows: 1fr auto 1fr;
+        place-items: center;
         // background-opacity: 0.9;
 
         > img {
