--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -4,7 +4,7 @@ import LargeImage from '../largeImage.astro'
 
 const { carouselIndex } = Astro.props
 
-import img0  from '../../../members/isabelle/portfolio/Birds-are-essential-for-our-environment!.png'
+import img0  from '../../../members/isabelle/portfolio/Birds-are-essential-for-our-environment!.svg'
 import img1  from '../../../members/shikha/portfolio/Did-you-know.png'
 import img2  from "../../../members/shikha/portfolio/Women's-History-Month!.png"
 import img3  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_4.png'
@@ -15,8 +15,8 @@ import img7  from '../../../members/samantha/portfolio/Help-save-the-oceans_1.pn
 import img8  from '../../../members/samantha/portfolio/Help-save-the-oceans_2.png'
 import img9  from '../../../members/samantha/portfolio/Help-save-the-oceans_3.png'
 import img10 from '../../../members/samantha/portfolio/Help-save-the-oceans_4.png'
-import img11 from "../../../members/isabelle/portfolio/DON'T-EAT-FROGS.png"
-import img12 from '../../../members/isabelle/portfolio/Untitled-(800-x-1000-px).png'
+import img11 from "../../../members/isabelle/portfolio/DON'T-EAT-FROGS.svg"
+import img12 from '../../../members/isabelle/portfolio/Untitled-(800-x-1000-px).svg'
 import img13 from '../../../members/shikha/portfolio/Elarra.jpg'
 import img14 from '../../../members/shikha/portfolio/Fairy.jpg'
 import img15 from '../../../members/shikha/portfolio/c3.jpg'
