--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -5,7 +5,7 @@ import LargeImage from '../largeImage.astro'
 const { carouselIndex } = Astro.props
 
 import img0  from '../../../members/isabelle/portfolio/Birds-are-essential-for-our-environment!.svg'
-import img1  from '../../../members/shikha/portfolio/Did-you-know.png'
+import img1  from '../../../members/shikha/portfolio/Did-you-know.pnsvgg'
 import img2  from "../../../members/shikha/portfolio/Women's-History-Month!.png"
 import img3  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_4.png'
 import img4  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_5.png'
