--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -5,12 +5,12 @@ import LargeImage from '../largeImage.astro'
 const { carouselIndex } = Astro.props
 
 import img0  from '../../../members/isabelle/portfolio/Birds-are-essential-for-our-environment!.svg'
-import img1  from '../../../members/shikha/portfolio/Did-you-know.pnsvgg'
-import img2  from "../../../members/shikha/portfolio/Women's-History-Month!.png"
-import img3  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_4.png'
-import img4  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_5.png'
-import img5  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_6.png'
-import img6  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_7.png'
+import img1  from '../../../members/shikha/portfolio/Did-you-know.svg'
+import img2  from "../../../members/shikha/portfolio/Women's-History-Month!.svg"
+import img3  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_4.svg'
+import img4  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_5.svg'
+import img5  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_6.svg'
+import img6  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_7.svg'
 import img7  from '../../../members/samantha/portfolio/Help-save-the-oceans_1.png'
 import img8  from '../../../members/samantha/portfolio/Help-save-the-oceans_2.png'
 import img9  from '../../../members/samantha/portfolio/Help-save-the-oceans_3.png'
