--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -22,7 +22,7 @@ import img14 from '../../../members/shikha/portfolio/Fairy.jpg'
 import img15 from '../../../members/shikha/portfolio/c3.jpg'
 import img16 from '../../../members/shikha/portfolio/Rapunzel.jpg'
 
-var imgs = [
+var images = [
     {
         username: "isabelle", 
         file: "Birds-are-essential-for-our-environment!.png", 
