--- a/src/components/carousels/workCarousel.astro
+++ b/src/components/carousels/workCarousel.astro
@@ -4,109 +4,109 @@ import LargeImage from '../largeImage.astro'
 
 const { carouselIndex } = Astro.props
 
-import img0  from '../../../members/isabelle/portfolio/Birds-are-essential-for-our-environment!.svg'
-import img1  from '../../../members/shikha/portfolio/Did-you-know.svg'
-import img2  from "../../../members/shikha/portfolio/Women's-History-Month!.svg"
-import img3  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_4.png'
-import img4  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_5.png'
-import img5  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_6.png'
-import img6  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_7.png'
-import img7  from '../../../members/samantha/portfolio/Help-save-the-oceans_1.svg'
-import img8  from '../../../members/samantha/portfolio/Help-save-the-oceans_2.svg'
-import img9  from '../../../members/samantha/portfolio/Help-save-the-oceans_3.svg'
-import img10 from '../../../members/samantha/portfolio/Help-save-the-oceans_4.svg'
-import img11 from "../../../members/isabelle/portfolio/DON'T-EAT-FROGS.svg"
-import img12 from '../../../members/isabelle/portfolio/Untitled-(800-x-1000-px).svg'
-import img13 from '../../../members/shikha/portfolio/Elarra.jpg'
-import img14 from '../../../members/shikha/portfolio/Fairy.jpg'
-import img15 from '../../../members/shikha/portfolio/c3.jpg'
-import img16 from '../../../members/shikha/portfolio/Rapunzel.jpg'
+import img1  from '../../../members/isabelle/portfolio/Birds-are-essential-for-our-environment!.svg'
+import img2  from '../../../members/shikha/portfolio/Did-you-know.svg'
+import img3  from "../../../members/shikha/portfolio/Women's-History-Month!.svg"
+import img4  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_4.png'
+import img5  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_5.png'
+import img6  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_6.png'
+import img7  from '../../../members/juhi/portfolio/Little-Wishes-Hospital-Gown-Feb-2023_7.png'
+import img8  from '../../../members/samantha/portfolio/Help-save-the-oceans_1.svg'
+import img9  from '../../../members/samantha/portfolio/Help-save-the-oceans_2.svg'
+import img10  from '../../../members/samantha/portfolio/Help-save-the-oceans_3.svg'
+import img11 from '../../../members/samantha/portfolio/Help-save-the-oceans_4.svg'
+import img12 from "../../../members/isabelle/portfolio/DON'T-EAT-FROGS.svg"
+import img13 from '../../../members/isabelle/portfolio/Untitled-(800-x-1000-px).svg'
+import img14 from '../../../members/shikha/portfolio/Elarra.jpg'
+import img15 from '../../../members/shikha/portfolio/Fairy.jpg'
+import img16 from '../../../members/shikha/portfolio/c3.jpg'
+import img17 from '../../../members/shikha/portfolio/Rapunzel.jpg'
 
 var images = [
     {
         username: "isabelle", 
         file: "Birds-are-essential-for-our-environment!.png", 
-        img: img0,
-    }, 
-    {
-        username: "shikha", 
-        file: "Did-you-know.png", 
         img: img1,
     }, 
     {
         username: "shikha", 
-        file: "Women's-History-Month!.png", 
+        file: "Did-you-know.png", 
         img: img2,
     }, 
     {
-        username: "juhi", 
-        file: "Little-Wishes-Hospital-Gown-Feb-2023_4.png", 
+        username: "shikha", 
+        file: "Women's-History-Month!.png", 
         img: img3,
     }, 
     {
         username: "juhi", 
-        file: "Little-Wishes-Hospital-Gown-Feb-2023_5.png", 
+        file: "Little-Wishes-Hospital-Gown-Feb-2023_4.png", 
         img: img4,
     }, 
     {
         username: "juhi", 
-        file: "Little-Wishes-Hospital-Gown-Feb-2023_6.png", 
+        file: "Little-Wishes-Hospital-Gown-Feb-2023_5.png", 
         img: img5,
     }, 
     {
         username: "juhi", 
-        file: "Little-Wishes-Hospital-Gown-Feb-2023_7.png", 
+        file: "Little-Wishes-Hospital-Gown-Feb-2023_6.png", 
         img: img6,
     }, 
     {
-        username: "samantha", 
-        file: "Help-save-the-oceans_1.png", 
+        username: "juhi", 
+        file: "Little-Wishes-Hospital-Gown-Feb-2023_7.png", 
         img: img7,
     }, 
     {
         username: "samantha", 
-        file: "Help-save-the-oceans_2.png", 
+        file: "Help-save-the-oceans_1.png", 
         img: img8,
     }, 
     {
         username: "samantha", 
-        file: "Help-save-the-oceans_3.png", 
+        file: "Help-save-the-oceans_2.png", 
         img: img9,
     }, 
     {
         username: "samantha", 
-        file: "Help-save-the-oceans_4.png", 
+        file: "Help-save-the-oceans_3.png", 
         img: img10,
     }, 
     {
-        username: "isabelle", 
-        file: "DON'T-EAT-FROGS.png", 
+        username: "samantha", 
+        file: "Help-save-the-oceans_4.png", 
         img: img11,
     }, 
     {
         username: "isabelle", 
-        file: "Untitled-(800-x-1000-px).png", 
+        file: "DON'T-EAT-FROGS.png", 
         img: img12,
     }, 
     {
-        username: "shikha", 
-        file: "Elarra.jpg", 
+        username: "isabelle", 
+        file: "Untitled-(800-x-1000-px).png", 
         img: img13,
     }, 
     {
         username: "shikha", 
-        file: "Fairy.jpg", 
+        file: "Elarra.jpg", 
         img: img14,
     }, 
     {
         username: "shikha", 
-        file: "c3.jpg", 
+        file: "Fairy.jpg", 
         img: img15,
     }, 
     {
         username: "shikha", 
-        file: "Rapunzel.jpg", 
+        file: "c3.jpg", 
         img: img16,
+    }, 
+    {
+        username: "shikha", 
+        file: "Rapunzel.jpg", 
+        img: img17,
     }, 
 ]
 
@@ -124,7 +124,7 @@ function toProper(user) {
 
 var dId = 'workCarousel'
 ---
-<Carousel carouselIndex={carouselIndex} dataColumns={17} dataId={dId}>
+<Carousel carouselIndex={carouselIndex} dataColumns={images.length} dataId={dId}>
     {
         images.map((data, i) => {
             var img = data.img
