--- a/src/styles/components/largeImage.scss
+++ b/src/styles/components/largeImage.scss
@@ -12,6 +12,7 @@ html:has(.img-parent > input[type="checkbox"]:checked) {
             position: fixed;
         }
         &::before {
+            content: '';
             inset: 0;
             background-color: var(--bg-color);
             opacity: 0.9;
