--- a/src/components/largeImage.astro
+++ b/src/components/largeImage.astro
@@ -7,9 +7,11 @@ import '../styles/components/largeImage.scss'
 ---
 <label class="img-parent">
     <input type="checkbox" />
-    {
-        !!img
-         ? <Image id={id || null} src={img} style={`--bg: url('${img.src}')`} alt={alt || ''} draggable={draggable || false} />
-         : <Image id={id || null} src={src} style={`--bg: url('${    src}')`} alt={alt || ''} draggable={draggable || false} />
-    }
+    <div class="img-container">
+        {
+            !!img
+             ? <Image id={id || null} src={img} style={`--bg: url('${img.src}')`} alt={alt || ''} draggable={draggable || false} />
+             : <Image id={id || null} src={src} style={`--bg: url('${    src}')`} alt={alt || ''} draggable={draggable || false} />
+        }
+    </div>
 </label>
