--- a/src/styles/components/carousel.scss
+++ b/src/styles/components/carousel.scss
@@ -24,6 +24,7 @@
         gap: calc(var(--gap)*2 + 10px);
     
         width: 100%;
+        max-height: 750px;
     
         $grid: repeat(var(--cols, 1), 100%);
         grid-template-columns: $grid;
